--- a/TorrServ/appsettings.json
+++ b/TorrServ/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:torrserver.database.windows.net,1433;Initial Catalog=TorrServ;Persist Security Info=False;User ID=sepiat;Password=5123118Ss;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:torrserver.database.windows.net,1433;Initial Catalog=TorrServ;Persist Security Info=False;User ID=sepiat;Password=what for you password?;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
